fix(expandable): hidden component overflow, when closed

--- a/src/app/components/expandable/expandable.component.scss
+++ b/src/app/components/expandable/expandable.component.scss
@@ -4,5 +4,6 @@
 
     .wrapper {
         transition: all 400ms;
+        overflow: hidden;
     }
 }
